--- a/AppSpec.yml
+++ b/AppSpec.yml
@@ -3,12 +3,18 @@ os: linux
 files:
   - source: /
     destination: /var/www/html
+
 hooks:
   BeforeInstall:
     - location: install_dependencies.sh
       timeout: 300
       runas: root
-  ApplicationStart:
-    - location:start_server.sh
+  AfterInstall:
+    - location: start_server.sh
       timeout: 300
       runas: root
+  ApplicationStart:
+    - location: verify_service.sh
+      timeout: 300
+      runas: root
+
